@@ -1,5 +1,9 @@
 2005-12-09  Sam Steingold  <sds@gnu.org>
 
+	* m4/readline.m4 (CL_READLINE): check for <readline/readline.h>
+
+2005-12-09  Sam Steingold  <sds@gnu.org>
+
 	* encoding.d (CHARSET-TYPEP): use Sstring_length instead of
 	Svector_length for the range string because Svector_length returns
 	non-0 value for "" on AMD64-Linux
